Updated frontend and backend code
